feat: :lipstick: rename 'Preferences' to 'Preferences: Note To Subtasks'

--- a/NoteToSubtasks.omnifocusjs/Resources/en.lproj/preferences.strings
+++ b/NoteToSubtasks.omnifocusjs/Resources/en.lproj/preferences.strings
@@ -1,4 +1,4 @@
-"label" = "Preferences";
-"shortLabel" = "Preferences";
-"mediumLabel" = "Preferences";
-"longLabel" = "Preferences";
+"label" = "Preferences: Note To Subtasks";
+"shortLabel" = "Preferences: Note To Subtasks";
+"mediumLabel" = "Preferences: Note To Subtasks";
+"longLabel" = "Preferences: Note To Subtasks";
